# CC-SSP_ROS_Planner

./: README.md
ccssp_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
ccssp_local_planner/cfg/: CCSSPPlanner.cfg
ccssp_local_planner/include/ccssp_local_planner/: Node.h  ccssp_planner.h  ccssp_planner_ros.h  ccssp_solver.h  gurobi_c.h  scored_planner.h
ccssp_local_planner/src/: ccssp_planner.cpp  ccssp_planner_ros.cpp  ccssp_solver.cpp  scored_planner.cpp
ccssp_local_planner/src/cpp/: Batch.cpp  Batch.h  Callback.cpp  Callback.h  Column.cpp  Column.h  Common.h  Constr.cpp  Constr.h  Env.cpp  Env.h  Exception.cpp  Exception.h  Expr.h  GenConstr.cpp  GenConstr.h  LinExpr.cpp  LinExpr.h  Model.cpp  Model.h  QConstr.cpp  QConstr.h  QuadExpr.cpp  QuadExpr.h  SOS.cpp  SOS.h  TempConstr.cpp  TempConstr.h  Var.cpp  Var.h  attrprivate.cpp  attrprivate.h  parprivate.h  public.h
